--- a/html assignments/tech-style.css
+++ b/html assignments/tech-style.css
@@ -10,6 +10,9 @@ body{
     padding: 0;
     margin: 0;
 }
+.text-bold{
+    font-weight:bold;
+}
 .d-flex{
     display: flex;
 }
@@ -43,7 +46,7 @@ body{
 } */
 
 .navbar {
-    background-color: rgb(84, 83, 83);
+    background-color: rgb(51, 51, 51);
 }
 .navbar ul {
     list-style-type: none;
@@ -77,10 +80,11 @@ body{
     padding: 0;
 }
 .title{
-    background-color: rgb(66, 130, 221);
+    background-color: rgb(51, 153, 204);
     font-style:normal;
     height: 70px;
     color: white;
+    /* unicode-bidi: isolate */
 }
 .title h1{
     margin-left: 15px ;
@@ -96,13 +100,15 @@ body{
 }
 .news{
     font-size: larger;
-    margin-bottom: 50px;
+    margin-bottom: 15px;
     margin-top: 50px;
-    margin-left: 250px;
+    margin-left: 30px;
     margin-right: 700px;
     padding-top: 5px;
     /* padding-left: 20px; */
     border: solid black 2px;
+    line-height: 30px;
+    list-style-type: none;
 }
 .news-file{
     margin-bottom:10px;
@@ -118,3 +124,10 @@ body{
     display: inline-block;
     width: 100%;
 } */
+
+.description{
+    padding-left: 30px;
+    padding-top: 10px;
+    font-size: larger;
+
+}
