--- a/html assignments/tech-style.css
+++ b/html assignments/tech-style.css
@@ -1,15 +1,19 @@
-/*common classes*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
+
+body {
+    margin: 0;
+    font-family: "Lato", sans-serif;
+}
+
+
+/* common classes */
 .br {
     border: solid red 2px;
 }
 
 .bg {
     border: solid green 2px;
-}
-
-body {
-    padding: 0;
-    margin: 0;
 }
 
 .text-bold {
@@ -20,12 +24,44 @@ body {
     display: flex;
 }
 
-.d-inine-block {
+.d-inline-block {
     display: inline-block;
 }
 
 .d-inline {
     display: inline;
+}
+.p-5 {
+    padding: 5px;
+}
+
+.m-0 {
+    margin: 0;
+}
+.block {
+    border: 2px;
+}
+
+
+
+/* header section */
+.header {
+    padding: 0;
+}
+
+.title {
+    background-color: rgb(51, 153, 204);
+    font-style: "Lato", sans-serif;
+    height: 70px;
+    color: white;
+    padding-left: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.title h1 {
+    margin-left: 15px;
+    font-size: 50px;
 }
 
 .navbar {
@@ -44,7 +80,7 @@ body {
 }
 
 .navbar a {
-    padding: 10px;
+    padding: 15px;
     text-decoration: none;
     color: white;
     display: inline-block;
@@ -57,58 +93,30 @@ body {
     background-color: black;
 }
 
-.p-5 {
-    padding: 5px;
-}
-
-.m-0 {
-    margin: 0;
-}
-
-.header {
-    padding: 0;
-}
-
-.title {
-    background-color: rgb(51, 153, 204);
-    font-style: normal;
-    height: 70px;
-    color: white;
-    padding-left: 10px;
-}
-
-.title h1 {
-    margin-left: 15px;
-    font-size: 50px;
-}
-
-.news {
-    padding: 20px;
-}
-
-.block {
-    border: 2px;
-}
-
-.news {
-    font-size: larger;
+/* .navbarimage{
+    display:block;
+    padding-left: 100px;
+    image:size 2px;
+    image-orientation: from-image;
+} */
+.news-box {
+    font-size: large;
     margin-bottom: 15px;
     margin-top: 50px;
     margin-left: 30px;
-    margin-right: 700px;
+    /* margin-right: 30px; */
     padding-top: 5px;
-    border: solid black 2px;
-    line-height: 30px;
+    border: solid black 1px;
+    line-height: 20px; 
     list-style-type: none;
 }
 
-.news-file {
+.news-content {
     margin-bottom: 10px;
     padding: 2px;
     padding-left: 20px;
-    padding-right: 20px;
-    border-radius: 500px;
-    display: inline-block;
+    /* padding-right: 20px; */
+    /* border-radius: 500px; */
 }
 
 .description {
