--- a/html assignments/tech-style.css
+++ b/html assignments/tech-style.css
@@ -17,7 +17,8 @@ body {
 }
 
 .text-bold {
-    font-weight: bold;
+    font-weight:bolder;
+    font-size: large;
 }
 
 .d-flex {
@@ -42,8 +43,6 @@ body {
     border: 2px;
 }
 
-
-
 /* header section */
 .header {
     padding: 0;
@@ -51,7 +50,6 @@ body {
 
 .title {
     background-color: rgb(51, 153, 204);
-    font-style: "Lato", sans-serif;
     height: 70px;
     color: white;
     padding-left: 10px;
@@ -62,6 +60,7 @@ body {
 .title h1 {
     margin-left: 15px;
     font-size: 50px;
+    font-weight: 100;
 }
 
 .navbar {
@@ -80,7 +79,7 @@ body {
 }
 
 .navbar a {
-    padding: 15px;
+    padding: 10px;
     text-decoration: none;
     color: white;
     display: inline-block;
@@ -100,13 +99,15 @@ body {
     image-orientation: from-image;
 } */
 .news-box {
-    font-size: large;
+    font-size:small;
     margin-bottom: 15px;
-    margin-top: 50px;
+    margin-top: 20px;
     margin-left: 30px;
     /* margin-right: 30px; */
-    padding-top: 5px;
-    border: solid black 1px;
+    padding-top:0;
+    padding-left: 15px;
+    padding-right: 5px;
+    border: solid black 0.5px;
     line-height: 20px; 
     list-style-type: none;
 }
@@ -114,13 +115,14 @@ body {
 .news-content {
     margin-bottom: 10px;
     padding: 2px;
-    padding-left: 20px;
+    /* padding-left: 20px; */
+    list-style-type:none;
     /* padding-right: 20px; */
     /* border-radius: 500px; */
 }
 
 .description {
     padding-left: 30px;
-    padding-top: 10px;
-    font-size: larger;
+    padding-top: 5px;
+    font-size: small;
 }
