--- a/html assignments/technovert/tech-style.css
+++ b/html assignments/technovert/tech-style.css
@@ -111,6 +111,7 @@ li{
 } */
 .news-box {
     font-size:small;
+    font-weight: 100px;
     /* margin-bottom: 15px; */
     margin-top: 20px;
     margin-left: 30px;
@@ -119,17 +120,19 @@ li{
     /* margin-right: 30px; */
     margin-bottom: 50px;
      padding-top:0; 
-    padding-left: 15px; 
+    padding-left: 150px; 
+    padding-bottom: 10px;
     /* padding-right: 5px; */
     border: solid black 0.5px;
      /* line-height: 20px;  */
     list-style-type: none;
+
 }
 
 .news-word{
     padding-left: 5px;
     padding-bottom: 0;
-    font-weight: 500px;
+    font-weight: 1000px;
 }
 .news-content {
     margin-bottom: 10px;
@@ -139,6 +142,8 @@ li{
     padding-left: 20px;
     list-style-type:none;
     padding-top: -5px;
+    padding-bottom:20px ;
+    font-size: small;
     /* padding-right: 20px; */
     /* border-radius: 500px; */
 }
@@ -151,4 +156,5 @@ li{
 .description-greeting{
   /* font-weight: 100; */
   font-size: 20px;
+  padding-bottom: 10px;
 }
